--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
         @keyframes popIn { from { transform: scale(0.9); opacity: 0; } to { transform: scale(1); opacity: 1; } }
         @keyframes zoomIn { from { transform: scale(0.9); } to { transform: scale(1); } }
     </style>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="text-slate-800 flex flex-col min-h-screen">
 
