Update items list for milk and veggies sections

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 title: "Milk Products",
                 icon: '<i class="fas fa-glass-milk"></i>',
                 desc: "Fresh, unadulterated goodness from our happy cows.",
-                items: ["Pure Farm Milk (Raw & Pasteurized)", "Traditional Ghee (Aromatic & Grainy)", "Natural Curd (Probiotic Rich)"]
+                items: ["Pure Farm Milk (Raw)", "Traditional Ghee (Aromatic & Grainy)", "Natural Curd (Probiotic Rich)"]
             },
             eggs: {
                 title: "Country Eggs",
@@ -622,7 +622,7 @@
                 title: "Seasonal Veggies",
                 icon: '<i class="fas fa-carrot"></i>',
                 desc: "Grown with love, harvested at peak ripeness.",
-                items: ["Spinach", "Okra", "Beans (Selection varies by season)"]
+                items: ["Tomatoes", "Brinjals", "Beans (Selection varies by current rotation)"]
             },
             curd: {
                 title: "Natural Curd",
